fix scrollbar visible on some browsers

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
   background-color: black;
   color: white;
   font-size: 1em;
+  overflow: hidden; /* hide scrollbars */
 }
 
 * {
